    - update debian/patches/dont_depend_on_nspr_sources.patch
    - update debian/patches/nspr_flags_by_pkg_config_hack.patch
  * Use LIBDIR when touching .autoreg instead of /usr/lib/firefox-3*
    - update debian/firefox-3.0.postinst.in
  * Rewrite substitution rules to make them more generic
    - update debian/rules
  * Fix ftbfs with bogus install path for .autoreg
    - update debian/rules

  [ Alexander Sack <asac@ubuntu.com> ]
  * only display restart notification if firefox process is running
    - update debian/firefox-3.0-restart-required.update-notifier
  * ship $(DEBIAN_FF3_DIR)/.autoreg as a package managed file and touch it
    in .postinst maintainer scripts
    - update debian/rules
    - update debian/firefox-3.0.postinst.in
    - add debian/firefox-3.0-gnome-support.postinst

 -- Fabien Tassin <fta@sofaraway.org>  Fri, 14 Mar 2008 14:10:49 +0100

firefox-3.0 (3.0~b4+nobinonly-0ubuntu1) hardy; urgency=low

  [ Fabien Tassin <fta@sofaraway.org> ]
  * Bump xulrunner-1.9 dependencies to b4
    - update debian/control
  * Refresh diverged patches:
    - update debian/patches/dont_depend_on_nspr_sources.patch
    - update debian/patches/force_safebrowsing_off.patch
  * Drop extension from desktop launchers icons (LP: #190688)
    - update debian/firefox-3.0-*.desktop
  * Install new libjemalloc.so
    - update debian/firefox-3.0.install
  * Add optional support for system sqlite3 (we need >= 3.5 not in hardy)
    - update debian/rules
  * Fix debsearch.src to work with new packages.ubuntu.com codebase (LP: #194681)
    Contributed by David Futcher <bobbocanfly@gmail.com>
    - update debian/debsearch.src
  * Bump gtk+ requirement to 2.10 because of the new Print Dialog
    - update debian/control
  * Add Polish translation to deskstop launcher (LP: #196953)
    Contributed by Tomasz Dominikowski <dominikowski@gmail.com>
    - update debian/firefox-3.0-final.desktop
  * Change $(shell) into $(wildcard) for XUL SDK detection
    - update debian/rules